--- a/app/templates/console/plugin.css
+++ b/app/templates/console/plugin.css
@@ -165,6 +165,7 @@ pre, code {font: inherit;}
 .wide.right {margin: 0 -29.3333333% 0 0}
 
 .margin p {margin-top: 2px}
+.margin h1, .margin h2, .margin h3 {margin-top:0}
 
 .column {
   box-sizing: border-box;
